--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="/bundle.css" rel="stylesheet">
-  <title>Document</title>
-</head>
-<body>
-  ЗДАРОВА ЧУЧЕЛО МЯУЧЕЛО
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="/bundle.css" rel="stylesheet" />
+    <title>Document</title>
+  </head>
+  <body>
+    ЗДАРОВА, ЧУЧЕЛО МЯУЧЕЛО
+    <img href="./images/1.JPG" />
+  </body>
 </html>
